--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
-  <link rel="stylesheet" href="/dist/style.css">
+  <link rel="stylesheet" href="./dist/style.css">
   
   <title>Frontend Mentor | Interactive comments section</title>
 
@@ -17,7 +17,7 @@
     <!-- card feeds -->
     <article class="bg-white mb-4 rounded-md p-4">
       <header class="relative flex items-center">
-        <img src="../src/images/avatars/image-amyrobson.webp" alt="" class="object-fit w-8">
+        <img src="./src/images/avatars/image-amyrobson.webp" alt="" class="object-fit w-8">
         <span class="text-dark-blue font-bold mx-3 ">amyrobson</span>
         <span class="text-grayish-blue">1 month ago</span>
       </header>
@@ -26,15 +26,15 @@
         <div class="flex justify-between items-center">
           <div class="bg-light-gray inline-block rounded-lg">
             <button class="text-light-grayish-blue px-3 py-3">
-              <img src="../src/images/icon-plus.svg" class="" alt="">
+              <img src="./src/images/icon-plus.svg" class="" alt="">
             </button>
             <span class="inline-block text-moderate-blue font-medium w-5">12</span>
             <button class="align-middle px-3 py-3">
-              <img src="../src/images/icon-minus.svg" alt="">
+              <img src="./src/images/icon-minus.svg" alt="">
             </button>
           </div>
           <div class="bg-transparent inline-flex justify-end align-middle">
-            <img src="../src/images/icon-reply.svg" alt="" class="w-4 h-4 mt-1 object-fit ">
+            <img src="./src/images/icon-reply.svg" alt="" class="w-4 h-4 mt-1 object-fit ">
             <span class="text-moderate-blue font-bold mx-3">Reply</span>
           </div>
         </div>
@@ -42,7 +42,7 @@
 
     <article class="bg-white mb-4 rounded-md p-5">
       <header class="relative flex items-center">
-        <img src="../src/images/avatars/image-maxblagun.webp" alt="" class="object-fit w-8">
+        <img src="./src/images/avatars/image-maxblagun.webp" alt="" class="object-fit w-8">
         <span class="text-dark-blue font-bold mx-3 ">maxblagun</span>
         <span class="text-grayish-blue">2 weeks ago</span>
       </header>
@@ -51,15 +51,15 @@
       <div class="flex justify-between items-center">
         <div class="bg-light-gray inline-block rounded-lg">
           <button class="text-light-grayish-blue px-3 py-3">
-            <img src="../src/images/icon-plus.svg" class="" alt="">
+            <img src="./src/images/icon-plus.svg" class="" alt="">
           </button>
           <span class="inline-block text-moderate-blue font-medium w-5">5</span>
           <button class="align-middle px-3 py-3">
-            <img src="../src/images/icon-minus.svg" alt="">
+            <img src="./src/images/icon-minus.svg" alt="">
           </button>
         </div>
         <div class="bg-transparent inline-flex justify-end align-middle">
-          <img src="../src/images/icon-reply.svg" alt="" class="w-4 h-4 mt-1 object-fit ">
+          <img src="./src/images/icon-reply.svg" alt="" class="w-4 h-4 mt-1 object-fit ">
           <span class="text-moderate-blue font-bold mx-3">Reply</span>
         </div>
       </div>
@@ -69,7 +69,7 @@
     <div class="block border-l-2 border-light-gray">
       <article class="bg-white mb-4 rounded-md p-5 ml-5">
         <header class="relative flex items-center">
-          <img src="../src/images/avatars/image-ramsesmiron.png" alt="" class="object-fit w-8">
+          <img src="./src/images/avatars/image-ramsesmiron.png" alt="" class="object-fit w-8">
           <span class="text-dark-blue font-bold mx-3 align-middle">ramsesmiron</span>
           <span class="text-grayish-blue">1 week ago</span>
         </header>
@@ -78,15 +78,15 @@
         <div class="flex justify-between items-center">
           <div class="bg-light-gray inline-block rounded-lg">
             <button class="text-light-grayish-blue px-3 py-3">
-              <img src="../src/images/icon-plus.svg" class="" alt="">
+              <img src="./src/images/icon-plus.svg" class="" alt="">
             </button>
             <span class="inline-block text-moderate-blue font-medium w-5">4</span>
             <button class="align-middle px-3 py-3">
-              <img src="../src/images/icon-minus.svg" alt="">
+              <img src="./src/images/icon-minus.svg" alt="">
             </button>
           </div>
           <div class="bg-transparent inline-flex justify-end align-middle">
-            <img src="../src/images/icon-reply.svg" alt="" class="w-4 h-4 mt-1 object-fit ">
+            <img src="./src/images/icon-reply.svg" alt="" class="w-4 h-4 mt-1 object-fit ">
             <span class="text-moderate-blue font-bold mx-3">Reply</span>
           </div>
         </div>
@@ -94,7 +94,7 @@
       
       <article class="bg-white mb-4 rounded-md p-5 ml-5 shadow-sm">
         <header class="relative flex items-center">
-          <img src="../src/images/avatars/image-juliusomo.webp" alt="" class="object-fit w-8">
+          <img src="./src/images/avatars/image-juliusomo.webp" alt="" class="object-fit w-8">
           <span class="text-dark-blue font-semibold mx-3 align-middle">juliusomo <span class="bg-moderate-blue text-light-gray pb-1 px-2 pt-0.5 rounded-sm ml-1.5 font-normal">you</span></span>
           <span class="text-grayish-blue">2 days ago</span>
         </header>
@@ -103,17 +103,17 @@
         <div class="flex justify-between items-center">
           <div class="bg-light-gray inline-block rounded-lg">
             <button class="text-light-grayish-blue px-3 py-3">
-              <img src="../src/images/icon-plus.svg" class="" alt="">
+              <img src="./src/images/icon-plus.svg" class="" alt="">
             </button>
             <span class="inline-block text-moderate-blue font-medium w-5">2</span>
             <button class="align-middle px-3 py-3">
-              <img src="../src/images/icon-minus.svg" alt="">
+              <img src="./src/images/icon-minus.svg" alt="">
             </button>
           </div>
           <div class="bg-transparent inline-flex justify-end align-middle">
-            <img src="../src/images/icon-delete.svg" alt="" class="w-4 h-4 mt-1 object-fit ">
+            <img src="./src/images/icon-delete.svg" alt="" class="w-4 h-4 mt-1 object-fit ">
             <span class="text-soft-red font-bold mx-3">Delete</span>
-            <img src="../src/images/icon-edit.svg" alt="" class="w-4 h-4 mt-1 object-fit ">
+            <img src="./src/images/icon-edit.svg" alt="" class="w-4 h-4 mt-1 object-fit ">
             <span class="text-moderate-blue font-bold mx-3">Edit</span>
           </div>
         </div>
@@ -125,7 +125,7 @@
         <textarea name="add_comment" rows="3" class="block w-full rounded-lg border border-light-gray resize-none placeholder:px-3 placeholder:py-1 placeholder:text-grayish-blue"
           placeholder="Add a comment..."></textarea>
           <div class="flex justify-between items-center mt-5">
-            <img src="../src/images/avatars/image-juliusomo.webp" alt="avatar" class="w-10 mt-1 object-fit">
+            <img src="./src/images/avatars/image-juliusomo.webp" alt="avatar" class="w-10 mt-1 object-fit">
             <button class="py-3 px-6 bg-moderate-blue text-white rounded-lg ">SEND</button>
           </div>
     
