--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./src/images/favicon-32x32.png">
   
-  <link rel="stylesheet" type="text/css" href="./dist/style.css">
+  <link rel="stylesheet" type="text/css" href="https://iqsamwahyu.github.io/fe-mentor--2/dist/style.css">
   
   <title>Frontend Mentor | Interactive comments section</title>
 
